@@ -8,7 +8,9 @@
 		"ghcr.io/devcontainers-extra/features/apt-get-packages:1": {
 			"upgradePackages":true,
 			"packages": "cc65 build-essential pkg-config git libusb-1.0-0-dev fakeroot debhelper dpkg-dev libb64-dev udev"
-		}
+		},
+		"./src/minipro":{}
+		//TODO eventually get this feature in its own container
 	},
 	"customizations": {
 		"vscode": {"extensions": ["ms-vscode.makefile-tools",
@@ -18,9 +20,7 @@
 
 	//hack to make fakeroot performant (I run Fedora, seems to affect that OS per report)
 	//https://github.com/containerd/containerd/pull/7566
-	"runArgs": ["--ulimit=nofile=1024:1048576"],
-
-	"postCreateCommand": "chmod +x .devcontainer/install/install.sh && .devcontainer/install/install.sh"
+	"runArgs": ["--ulimit=nofile=1024:1048576"]
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
