@@ -1,0 +1,10 @@
+{
+    "name": "minipro chip programmer",
+    "id": "minipro",
+    "version": "1.0.0",
+    "description": "A free and open command-line program for controlling chip programmers by Autoelectric / Xgecu.",
+    "options": {},
+    "installsAfter": [
+        "ghcr.io/devcontainers-extra/features/apt-get-packages"
+    ]
+}
