@@ -1,5 +1,5 @@
-mkdir .minipro_fromgitlab
-cd .minipro_fromgitlab
+mkdir .tempbuild
+cd .tempbuild
 git clone https://gitlab.com/DavidGriffith/minipro.git
 cd minipro
 #dpkg-buildpackge performs the make and spits out the deb in parent directory
@@ -7,4 +7,7 @@ fakeroot dpkg-buildpackage -b -us -uc
 cd ..
 # find the generated deb (but not the debug symbols) and installs them
 find -H -name "*.deb" -not -name "*dbgsym*" | xargs sudo dpkg -i
+cd ..
+# tidy up
+rm -r .tempbuild
 exit
