@@ -1,4 +1,0 @@
-{
-//    "makefile.configureOnOpen": false,
-//    "makefile.makeDirectory":".c65"
-}
