@@ -1,14 +1,0 @@
-{
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
-    "version": "2.0.0",
-    "tasks": [
-        {
-            "type": "shell",
-            "command": "make all",
-            "group": "build",
-            "label": "cc65: Make All",
-            
-        }
-    ]
-}
